chore: Change manual signup & signin api path
